2000-03-21  Akim Demaille  <akim@epita.fr>

	Provide a language independent means to generate language specific
	programs.

	* acgeneral.m4 (_AC_LANG_DISPATCH): New macro.
	(AC_LANG): Use it.
	(AC_LANG_SOURCE, AC_LANG_SOURCE(C), AC_LANG_SOURCE(C++),
	AC_LANG_SOURCE(FORTRAN77)): New macros.
	(AC_TRY_COMPILER, AC_EGREP_CPP, AC_TRY_RUN_NATIVE): Use
	AC_LANG_SOURCE.

2000-03-21  Akim Demaille  <akim@epita.fr>

	Fix a bug: some macros (e.g., AC_REVISION, AC_COPYRIGHT etc.) can
	be used before AC_INIT, but they do require it.  But then, the
	argument of the explicit AC_INIT call is lost.

	* acgeneral.m4 (AC_CONFIG_SRCDIR): New macro.
	(_AC_INIT_SRCDIR): Adjust.
	(_AC_INIT): Pass your argument to AC_CONFIG_SRCDIR.

2000-03-21  Akim Demaille  <akim@epita.fr>

	* tests/semantics.m4 (AC_PATH_PROG, AC_PATH_PROGS): New tests.

2000-03-21  Akim Demaille  <akim@epita.fr>

	Start the language support overhaul: Introduce AC_LANG().

	* acgeneral.m4 (AC_LANG): Renamed as _AC_LANG_CURRENT.
	(AC_LANG, AC_LANG(C), AC_LANG(C++), AC_LANG(FORTRAN77)): New
	macros.
	(AC_LANG_C, AC_LANG_CPLUSPLUS, AC_LANG_FORTRAN): AU_DEFUN'ed.
	Adjust all callers.
	* acspecific.m4 (AC_F77_NAME_MANGLING): Remove the exceeding
	AC_LANG_RESTORE.
	* tests/Makefile.am (FILTER_MACROS): Add AC_LANG.

2000-03-21  Akim Demaille  <akim@epita.fr>

	Speed ups.

	* libm4.m4 (m4_append, m4_list_append): Use m4_define, not define.
	On my machine the former implementation takes 4mn 40s to run the
	test suite.  Using m4_define leads to 4mn 15s.
	* acgeneral.m4 (_AC_SUBST): Use AC_EXPAND_ONCE (which uses
	m4_define, not define).  4mn.
	(_AC_DIVERT): Don't use m4_case.  Starting from those 4mn, if you
	just move NORMAL* first in m4_case, the test suite is run in 3mn.
	If instead of using m4, you use an `associative array' plus a
	wrapper (current implementation), it falls to 2mn.

2000-03-21  Akim Demaille  <akim@epita.fr>

	* tests/tools.m4 (autoconf --trace): New test.

2000-03-21  Akim Demaille  <akim@epita.fr>
