@@ -1,3 +1,7 @@
+2000-03-23  Lars J. Aas  <larsa@sim.no>
+
+	* libm4.m4 (m4_do): New macro.
+
 2000-03-21  Akim Demaille  <akim@epita.fr>
 
 	Provide a language independent means to generate language specific
